--- a/client/src/pages/AddRecipePage/css/AddRecipePage.css
+++ b/client/src/pages/AddRecipePage/css/AddRecipePage.css
@@ -12,6 +12,8 @@
   justify-content: center;
 }
 
+
+
 /* 중앙 카드 */
 .add-recipe-card {
   width: 100%;
@@ -135,6 +137,7 @@
   gap: 4px;
 }
 
+.btn-add-inger
 
 /* 버튼 */
 .btn-area {
