--- a/client/src/pages/RecipeListPage/css/RecipeCard.css
+++ b/client/src/pages/RecipeListPage/css/RecipeCard.css
@@ -13,7 +13,7 @@
   box-shadow: 0px 6px 14px rgba(0,0,0,0.15);
 }
 
-/* 이미지 영역 */
+
 .recipe-card-img {
   position: relative;
   width: 100%;
@@ -29,14 +29,14 @@
   background: #dcdcdc;
 }
 
-/* Django 이미지 */
+
 .recipe-card-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-/* 별 아이콘 */
+
 .favorite-icon {
   position: absolute;
   top: 6px;
@@ -45,7 +45,7 @@
   cursor: pointer;
 }
 
-/* 텍스트 영역 */
+
 .recipe-card-info {
   background: #fff;
   padding: 12px;
@@ -66,11 +66,11 @@
 }
 
 .recipe-card {
-  width: 220px; /* 기존: 180px */
+  width: 220px; 
 }
 
 .recipe-card-img {
-  height: 170px; /* 기존: 140px */
+  height: 170px; 
 }
 
 .search-bar {
